# tish-audio

./: --feature  .gitignore  01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  dev-server.tish  index.html  package-lock.json  package.json  postcss.config.cjs  release.config.cjs  release.full.config.json  test.tish  tmp.tish  vite.config.mts
.github/workflows/: ci.yml  release-build.yml  web-publish.yml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: audio_input.rs  lib.rs  main.rs  midi_input.rs  synth_engine.rs
npm/tish-audio-release/: package.json
scripts/: build-worklets.mjs  dev-watch.mjs  rename-dist.mjs  sync-react-entries.mjs  tish.mjs
src/: App.tish  icons.tish  index.css  main.tish  tmp.tish
src/arcade/: gameProfiles.tish  pitchLanes.tish  rhythmEngine.tish  songPhrase.tish
src/audio/: dsp.tish  graphSignature.tish  nativeAudioIn.worklet.js  nativeSynthOut.worklet.tish  pedalLibrary.tish  playChordReference.tish  rebuildAudioGraph.tish  smartGateTick.tish  smoothAudioParam.tish  syncAudioNodeParams.tish
src/guitar/: chordLessonVoicings.tish  chordShapeGrade.tish  fretboardAssignment.tish  guitarPitchFrame.tish  instrumentSpec.tish  liveChordDetect.tish  liveToneAndString.tish  polyphonicStrumAnalysis.tish  spectralPeaks.tish  spectralProfile.tish  stringInference.tish  (+1 more)
tish-tailwind/: tailwind.config.cjs
(+193 files in other folders)
